--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,25 +3,55 @@ html {
   margin: 0;
 }
 
+button {
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 0.5em;
+  padding-bottom: 0.3em;
+  margin-right: 10px;
+  border: none;
+  font: inherit;
+  font-size: small;
+  color: inherit;
+  background-color: #144b77;
+  /* show a hand cursor on hover; some argue that we
+  should keep the default arrow cursor for buttons */
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+}
+
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
+  background-color: #1a5c93;
+}
+
+.main-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 .head-container {
-  background: #FFF9F8;
+  background: #fff9f8;
   width: 100%;
   border: 1px solid transparent;
   box-shadow: 10px 10px 25px #142a4c;
-  border-bottom-left-radius: .1rem;
-  border-bottom-right-radius: .1rem;
+  border-bottom-left-radius: 0.1rem;
+  border-bottom-right-radius: 0.1rem;
   display: block;
   top: 0;
 }
+.head-container > h1 {
+  margin: 0px;
+}
 
 .head-img {
-  width: 9rem;
+  width: 500px;
   height: auto;
+  align-self: center;
 }
 
 .welcome {
@@ -32,22 +62,171 @@ body {
 }
 
 .body-container {
-  display: inline-block;
-  padding: 1rem;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 67%;
+  align-content: center;
+  align-items: center;
+  /* justify-content: center; */
+  height: 100vh;
+  overflow: auto;
+}
+
+.body-container > h1,
+.body-container > article {
+  align-self: center;
 }
 
 aside {
-  display: inline-block;
-  position: fixed;
+  width: calc(100% / 3 * 1);
+  border-left: 2px solid #ebad35;
   right: 0;
-  margin-right: 15rem;
-  width: 15rem;
   text-align: left;
   word-wrap: normal;
+  flex-basis: 33%;
+  min-height: 100%;
+  padding: 30px;
+  background-color: #144872;
 }
 
 .itinerary-container {
   position: fixed;
   display: block;
   border-left: 1px solid #142a4c;
+}
+
+input {
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #142a4c;
+  outline: 0;
+  background-color: #1a5c93;
+  padding: 10px;
+  color: white;
+}
+
+#parks-container,
+#restaurants-container,
+#meetups-container,
+#concerts-container {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  margin-bottom: 50px;
+}
+
+.searchBoxes-container {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  margin-top: 50px;
+}
+
+#search-results-container {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.results-card {
+  background: #7db8e8;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  align-items: baseline;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+}
+
+.results-card > button {
+  color: #ebad35;
+  padding-top: 0.1em;
+  flex-basis: 20%;
+  height: 35px;
+  justify-self: center;
+  align-self: center;
+  width: 30px;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+  padding-top: 0.5em;
+  padding-bottom: 0.3em;
+  margin-right: 20px;
+  border: none;
+  font: inherit;
+  font-size: small;
+  color: inherit;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+}
+
+#search-results-container > * {
+  margin-right: 10px;
+}
+.results-card > h5 {
+  flex-basis: 50%;
+}
+.results-card > p {
+  flex-grow: 0;
+  flex-basis: 30%;
+  text-align: left;
+  padding: 8px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  color: #142a4c;
+  font-family: "Open Sans", sans-serif;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: 700;
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+
+h4 {
+  font-size: 1em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h5 {
+  font-size: 1em;
+  text-align: left;
+}
+
+aside h1,
+aside h2,
+aside h4,
+aside h5,
+aside p {
+  color: #7db8e8;
+}
+aside h3 {
+  color: #142a4c;
+}
+
+aside h3 {
+  font-weight: 700;
+}
+
+input::placeholder {
+  color: #7db8e8;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-left: -10px;
+  padding-left: 0px;
 }
